# calcPI_async_MPI

./: Makefile.am  README.md  configure.ac
org/: calculate.org  main.org
scripts/: run_calc.sh  run_calc_time.sh
src/: calculate.c  main.c  main.org
